# Moana-Alive

./: .gitignore  README.md  app.py  build.sh  pyproject.toml  requirements.txt  run.py
final_videos/: metadata.json
generated_audios/: metadata.json
generated_videos/: metadata.json
static/: index.html  script.js  style.css
